feat: some logic
